# HooliHeard

./: Dockerfile.seed  Makefile  docker-compose.yml
.github/workflows/: build-push.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: accounts.py  chat.py  dashboard.py  insights.py
backend/app/models/: account.py  insight.py  pipeline_run.py  signal.py
backend/app/schemas/: dashboard.py  insight.py
backend/app/services/: priority_service.py
data/output/: Customer_Insights_2MonthsPrior.xlsx  Customer_Insights_Last30Days.xlsx  Insights_Combined_2026.xlsx  VoF_Weekly_Insights.xlsx  insights.json
docs/: v2-dashboard-plan.md
frontend/: Dockerfile  package-lock.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: dashboard.ts  insights.ts
frontend/src/components/chat/: ChatWidget.tsx
frontend/src/components/dashboard/: DashboardPage.tsx  FilterBar.tsx  InsightsByArea.tsx  InsightsByCategory.tsx  OpportunityPipeline.tsx  PriorityMatrix.tsx  ThemeHeatmap.tsx  TopAccountsTable.tsx  TrendChart.tsx  VerticalChart.tsx  WordCloud.tsx
frontend/src/components/insights/: InsightDetail.tsx  InsightFilters.tsx  InsightTable.tsx  InsightsPage.tsx  TopInsights.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/hooks/: useDashboard.ts  useInsights.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/types/: dashboard.ts  insight.ts
k8s/: backend.yaml  deploy-kubectl.sh  deploy.sh  frontend.yaml  seed-job.yaml
scripts/: normalize_raw.py  seed_db.py  synthesize_local.py
(+4 files in other folders)
